[package]
name = "n5011"
version = "0.2.1"
authors = ["Artem Khomenko <_mag12@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
futures = "0.3.5"
tokio = { version = "0.2.25", features = ["rt-threaded", "macros"] }
chrono = "0.4.19"

# Used to setup a webhook
warp = "0.3.0"
reqwest = "0.11.2"
serde_json = "1.0.50"

# Database
once_cell = "1.4.0"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.3.0"
native-tls = "0.2.7"

derive_more = "0.99.9"

frunk = "0.3.1"
frunk_core = "0.3.1"
teloxide = { version = "0.3.4", features = ["frunk"] }
teloxide-macros = "0.3.2"
