[package]
name = "n5011"
version = "0.5.1"
authors = ["Artem Khomenko <_mag12@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
futures = "0.3.15"
tokio = { version =  "1.8.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.7"
chrono = "0.4.19"

# Used to setup a webhook
warp = "0.3.1"
reqwest = "0.11.4"
serde_json = "1.0.64"

serde = "1.0.125"

# Database
once_cell = "1.4.0"
tokio-postgres = "0.7.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.7"

derive_more = "0.99.9"

teloxide = { version = "0.5.0", features = ["macros", "auto-send"] }
teloxide-macros = "0.4.1"
